--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-vars": "^2.2.0",
     "element-ui": "^2.0.3",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.3.3",
