--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "css-vars": "^2.2.0",
     "element-ui": "^2.0.3",
+    "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.3.3",
     "vue-router": "^3.0.1",
@@ -25,6 +26,7 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.11",
+    "element-pagination": "^2.0.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^3.1.0",
