--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.11",
     "element-pagination": "^2.0.0",
+    "element-upload": "^2.0.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^3.1.0",
