--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.26.0",
     "css-vars": "^2.2.0",
     "element-ui": "^2.0.3",
+    "jwt-decode": "^2.2.0",
     "less": "^3.0.1",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
@@ -23,7 +24,9 @@
     "scopedcss": "^0.1.4",
     "vue": "^2.3.3",
     "vue-highlightjs": "^1.3.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.1",
+    "vuejs-jwt": "^1.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
